@@ -791,7 +791,7 @@ Tcl_UnloadObjCmd(
 
 	    if (unLoadProcPtr != NULL) {
 		Tcl_MutexLock(&packageMutex);
-		if (pkgPtr->unloadProc != NULL) {
+		if ((pkgPtr->unloadProc != NULL) || (unLoadProcPtr == TclFSUnloadTempFile)) {
 		    unLoadProcPtr(pkgPtr->loadHandle);
 		}
 
@@ -1146,8 +1146,11 @@ TclFinalizeLoad(void)
 	 */
 
 	if (pkgPtr->fileName[0] != '\0') {
-	    if ((pkgPtr->unLoadProcPtr != NULL) && (pkgPtr->unloadProc != NULL)) {
-		pkgPtr->unLoadProcPtr(pkgPtr->loadHandle);
+	    Tcl_FSUnloadFileProc *unLoadProcPtr = pkgPtr->unLoadProcPtr;
+	    if ((unLoadProcPtr != NULL)
+		    && ((pkgPtr->unloadProc != NULL)
+		    || (unLoadProcPtr == TclFSUnloadTempFile))) {
+		unLoadProcPtr(pkgPtr->loadHandle);
 	    }
 	}
 #endif
